# WorkflowLearning

./: .dockerignore  .env.example  .gitignore  Dockerfile  LESSONS.md  README.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml  requirements.txt
apps/api/: pyproject.toml
apps/api/api/: config.py  main.py
apps/api/api/features/extract/: router.py
apps/api/api/features/samples/: service.py
apps/api/src/api/: config.py  main.py
apps/api/src/api/features/documents/: router.py
apps/api/src/api/features/evals/: router.py  service.py
apps/api/src/api/features/extract/: router.py  service.py
apps/api/src/api/features/guidelines/: router.py
apps/api/src/api/features/review/: router.py  store.py
apps/api/src/api/features/samples/: router.py  service.py
apps/api/src/api/lib/: json_store.py
apps/web/: index.html  package-lock.json  package.json  vercel.json
apps/web/scripts/: shot.mjs
apps/web/src/: index.css
apps/web/src/components/: AppShell.tsx  (+3 more)
docs/: RLI-IT-prep-brief.html  RLI-data-sources-research.md  RLI-submission-ingestion-research.md
evals/: harness.py  scorers.py
evals/cases/: example-001.json  example-001.txt  example-002.txt
experiments/: dspy_optimize.py
src/: extract.py  generate.py  schemas.py  trace.py
supabase/: config.toml
supabase/migrations/: 20260703000000_review_schema.sql  20260703000001_seed_review_items.sql
web/api/: config.py  main.py
web/api/lib/: jobs.py
web/frontend/: fly.toml  index.html  package-lock.json  package.json
web/frontend/src/: App.tsx  index.css  main.tsx
(+43 files in other folders)
