[project]
name = "rli-demo-api"
version = "0.1.0"
description = "Demo dashboard API (FastAPI, vertical slices) over the extraction core"
requires-python = ">=3.12"
dependencies = [
    "stello-idp-core",
    "stello-idp-evals",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pypdf>=5.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "api",
    "api.lib",
    "api.features",
    "api.features.extract",
    "api.features.documents",
    "api.features.samples",
    "api.features.review",
    "api.features.evals",
]
